# Tensorbench

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_benchmark.py
config/: scenarios.json
src/benchmark/: runner.py
src/tensorbench/: __init__.py  analyzer.py  benchmark.py  hw_detect.py
src/tensorbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tensorbench/analyzer/: engine.py
src/tensorbench/benchmark/: runner.py
src/tensorbench/core/: calculator.py  config.py  hardware_db.py  models.py
src/tensorbench/gui/: main_window.py
src/tensorbench/gui/widgets/: performance_map.py
src/tensorbench/hardware/: detector.py
