[project]
name = "tensorbench"
version = "0.1.0"
description = "Benchmark your AI hardware. Real metrics & upgrade advice."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TensorBench Contributors"}]

dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "llama-cpp-python>=0.2.0",  # Движок для запуска моделей
    "pynvml>=11.0.0"            # Мониторинг видеокарты NVIDIA
]

[project.scripts]
tensorbench = "main:cli"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
