[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorbench"
version = "0.2.0.dev1"
description = "Hardware evaluator for local AI workloads"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "psutil>=5.9",
    "py-cpuinfo>=9.0",
    "pynvml>=11.5",
    "llama-cpp-python>=0.3.0",
]

[project.scripts]
tensorbench = "tensorbench.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]